# pixiv-powerful-viewer

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.yaml  CHANGELOG.md  README.md  bun.lockb  dev-app-update.yml  electron-builder.yml  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.bun.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
modules/: kuromoji.js
plugins/vite-plugin-patch-kuromoji/: index.ts  patch-kuromoji.ts
public/: kuromoji.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: handlers.rs  main.rs
src-tauri/src/commands/: collection.rs  collection_list.rs  mod.rs
src-tauri/src/commands/collection/: mod.rs  parse_work.rs  poll_next_collection_chunk.rs  read_collection.rs  read_collection_list.rs  start_reading_collection.rs  write_collection_list.rs
src-tauri/src/commands/utils/: mod.rs  open_external.rs
src-tauri/src/lib/: mod.rs  serializable.rs  shared_buffer.rs  structs.rs
src/contexts/: CollectionContext.tsx  SearchContext.tsx
src/hooks/: index.ts  use-animate-scroll.ts  use-collection.ts  use-event-listener.ts  use-fullscreen.ts  use-keyboard-event.ts  use-local-storage.ts  use-output.ts  use-search-query.ts  use-search.ts  use-theme.ts  use-timeout.ts  use-wanakana.ts  use-works.ts  useEventListener.ts  useKeyboardEvent.ts  useWanakana.ts  useWorks.ts
src/lib/: Collection.ts  CollectionList.ts  kuromoji.ts
src/main/: index.ts
src/preload/: index.d.ts  (+1 more)
(+150 files in other folders)
