[package]
name = "pixiv-powerful-viewer"
version = "1.0.0-alpha.3"
description = "This app allows you to view and search collection saved by Powerful Pixiv Downloader browser extension locally"
authors = ["fekoneko"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fancy-regex = "0.13.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
