[package]
name = "pixiv-powerful-viewer"
version = "1.0.0-4"
description = "Pixiv Powerful Viewer"
authors = ["fekoneko"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.30"
tokio = "1.39.1"
opener = "0.7.1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
